[package]
name = "rust-wasm-sample"
description = "Simple rust wasm example using wasm-pack"
version = "0.1.0"
edition = "2021"
authors = ["TaeyoonKwon <tabriell@gmail.com>"]
readme = "README.md"
repository = "https://github.com/TaeyoonKwon/rust-rocket-sample"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
